# MPCircuits

./: .gitignore  README.md  auction.v  auction_stat.ods  knn_comb_stat .ods  primitives.v  psi.v  psi_bitonic_stat.ods  psi_simple_stat.ods  stable_matching_comb_stat.ods  tb_auction.v  tb_voting.v  voting (copy).v  voting_stat .ods
auction/: COMP-verilog.pvl  MULT-verilog.syn  MUX-verilog.pvl  MUX-verilog.syn  SUB-verilog.pvl  auction-verilog.pvl  auction-verilog.syn  auction.dcsh  auction.v  auction_BMR-verilog.pvl  auction_BMR-verilog.syn  auction_BMR.v  auction_no.dcsh  auction_tb.v  compile.sh  compile_no.sh  count.sh  count_no.sh  count_yos.sh  decoder-verilog.pvl  decoder-verilog.syn  default.svf  make_yos.m  make_yos_no.m  mod_mux-verilog.pvl  mod_mux-verilog.syn  primitives.v
bmr/: CMakeLists.txt  bmr.cpp  bmr.h  common.h  configure  log.cpp  log.h  parse_netlist.cpp  parse_netlist.h  scheduling.cpp  scheduling.h  v_2_bmr.cpp  v_2_bmr_main.cpp
knn_comb/: compile_yos.sh  knn_comb.dcsh  knn_comb.v  knn_comb_BMR.v  knn_comb_no.dcsh  knn_syn_16_1_128.v  knn_syn_16_1_16.v  knn_syn_16_1_256.v  knn_syn_16_1_4.v  knn_syn_16_1_64.v  knn_syn_16_1_8.v  knn_syn_16_2_128.v  knn_syn_16_2_16.v  knn_syn_16_2_4.v  knn_syn_16_2_64.v  knn_syn_16_2_8.v  knn_syn_16_3_128.v  knn_syn_16_3_16.v  knn_syn_16_3_4.v  knn_syn_16_3_64.v  knn_syn_16_3_8.v  knn_syn_32_1_128.v  knn_syn_32_1_16.v  knn_syn_32_1_4.v  knn_syn_32_1_64.v  knn_syn_32_1_8.v  knn_syn_32_2_16.v  knn_syn_32_2_4.v  knn_syn_32_2_64.v  knn_syn_32_2_8.v  knn_syn_32_3_16.v  knn_syn_32_3_4.v  knn_syn_32_3_64.v  knn_syn_32_3_8.v  make_yos.m
psi/: ADD-verilog.pvl  ADD-verilog.syn  COMP-verilog.syn  COUNT-verilog.pvl  COUNT-verilog.syn  FA-verilog.pvl  MULT-verilog.pvl  SUB-verilog.syn  compile.sh  default.svf  psi-verilog.pvl  psi-verilog.syn  psi.dcsh  psi.v  psi_BMR-verilog.pvl  psi_BMR-verilog.syn
psi_bitonic/: bitonic_sort.v  compile_yos.sh  count_yos.sh  make_yos.m  psi.dcsh  psi.v  psi_BMR.v  psi_no.dcsh
psi_simple/: count.sh  make_yos.m  psi.dcsh  psi.v  psi_BMR.v  psi_no.dcsh
stable_matching_comb/: compile.sh  compile_yos.sh  encoder.v  make_yos.m  stable_matching_comb.dcsh  stable_matching_comb.v  stable_matching_comb_BMR.v  stable_matching_comb_no.dcsh  stable_matching_comb_tb.v
voting/: ADD-verilog.pvl  ADD-verilog.syn  ADD_-verilog.pvl  ADD_-verilog.syn  COMP-verilog.pvl  COMP-verilog.syn  COUNT-verilog.pvl  COUNT-verilog.syn  FA-verilog.syn  (+25 more)
(+159 files in other folders)
